fix: fix tree-title 'g' letter be covered

--- a/src/tree/styles/tree.scss
+++ b/src/tree/styles/tree.scss
@@ -57,8 +57,6 @@
 
                 .thy-tree-node-title {
                     flex: 1;
-                    line-height: 100%;
-
                     &.truncate {
                         @include text-truncate();
                     }
